# PyDePSI

./: README.md  environment.yaml  example_mat4mpy.ipynb  matrixmult.m  mytestfunc.m  mytestfunc_fast.m  pyproject.toml
.github/: build.yml
.github/workflows/: build.yml
examples/matlab2python/: example_mat4mpy.ipynb
examples/notebooks/: demo_network.ipynb  demo_pydepsi.ipynb
examples/scripts/: README.md  demo_pydepsi.py  exec_python.slurm  script_ps_selection.py  script_reslc.py
exp/: README.md
exp/write_to_float16/: write_to_float16.ipynb
pydepsi/: classification.py  io.py  network.py  slc.py  utils.py
tests/: test_classification.py  test_io.py  test_slc.py
tests/data/: example.res
